# RegExJit

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build_msvc.cmd  gemini_data.json  gemini_raw_text.txt  run_tests.cmd  run_tests.sh  target.txt  test.pl  test_sub  test_sub.cpp
benchmarks/: CMakeLists.txt  benchmark.cpp
examples/: CMakeLists.txt  regexjit_disasm.cpp  test_minimal.cpp
examples/find_substitute/: main.cpp
examples/grep/: main.cpp
include/regexjit/: AST.h  Compiler.h  Error.h  Parser.h  Regex.h
scripts/: coverage.sh  run_benchmarks.cmd  run_benchmarks.sh  run_benchmarks_release.sh  run_cross_platform_tests.sh  run_tests.sh  show_docs.sh
src/: AST.cpp  Compiler.cpp  Parser.cpp  Regex.cpp
tests/: CMakeLists.txt  test_advanced_pcre.cpp  test_compiler.cpp  test_find.cpp  test_match.cpp  test_parser.cpp  test_substitute.cpp
