add_executable(regexjit_grep grep/main.cpp)
target_link_libraries(regexjit_grep regexjit)

add_executable(regexjit_find_substitute find_substitute/main.cpp)
target_link_libraries(regexjit_find_substitute regexjit)

add_executable(regexjit_disasm regexjit_disasm.cpp)
target_link_libraries(regexjit_disasm regexjit)

add_executable(regexjit_minimal test_minimal.cpp)
target_link_libraries(regexjit_minimal regexjit)
